--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <i class="bi bi-whatsapp"></i>
         <i class="bi bi-instagram"></i>
         <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
+        <p class="mt-3">Desenvolvido por by Murilo Almeida ©.</p>
     </footer>
     <script src="./script.js"></script>
 
