--- a/index.html
+++ b/index.html
@@ -1,111 +1,66 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Fast & Furious</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Fast & Furious</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <header class=" p-5">
+  <header class="p-5">
+    <nav class="container d-flex justify-content-between align-items-center">
+      <img src="img/logo prata.png" alt="Logo Fast & Furious" class="nav-img" loading="lazy" />
+      <ul class="nav mt-5">
+        <li class="nav-item"><a class="nav-link" href="./index.html">Início</a></li>
+        <li class="nav-item"><a class="nav-link" href="./galeria.html">Galeria</a></li>
+        <li class="nav-item"><a class="nav-link" href="./contato.html">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/logo prata.png" alt="Logo Fast & Furious" class="nav-img" loading="lazy">
-            <ul class="nav mt-5">
-                <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
-                <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-            </ul>          
-        </nav>
-       
-    </header>
+  <main class="container my-5">
+    <!-- Seção Início -->
+    <section id="inicio" class="my-5">
+      <div class="inicio-fundo d-flex justify-content-between align-items-center">
+        <div class="esquerda-conteudo">
+          <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindos ao</h1>
+          <img src="img/logo prata.png" alt="Logo fast & furious" class="mb-3" width="350" loading="lazy" />
+          <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Bora ver!</a>
+        </div>
+      </div>
+    </section>
 
+    <!-- Seção Tropicalia -->
+    <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
+      <div class="container d-flex align-items-center">
+        <div class="col-5">
+          <h2>O que é o Fast & Furious</h2>
+          <p class="p-2 text-item">
+            Velozes e Furiosos (Fast & Furious) é uma franquia de filmes de ação focada em corridas de rua, assaltos e espionagem,
+            marcada por carros tunados, cenas explosivas e temas de amizade e família.
+          </p>
+        </div>
+      </div>
+    </section>
 
-    <main class="container my-5">
+    <!-- Galeria será carregada aqui -->
+    <div id="galeria-container"></div>
 
-        <section id="inicio" class="my-5">
-            <div class="inicio-fundo d-flex justify-content-between align-items-center">
-                <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindos ao</h1>
-                    <img src="img/logo prata.png" alt="Logo fast & furious" class="mb-3" width="350"
-                        height="auto" loading="lazy">
-                    <a href="#tropicalia"
-                        class="btn btn-primary btn-lg botao-inicio fw-semibold">Bora ver!</a>
-                </div>
+    <!-- Contato será carregado aqui -->
+    <div id="contato-container"></div>
+  </main>
 
-            </div>
-        </section>
+  <footer class="text-center p-3 fst-italic">
+    <p>Acesse nossas redes:</p>
+    <i class="bi bi-whatsapp"></i>
+    <i class="bi bi-instagram"></i>
+    <i class="bi bi-tiktok"></i>
+    <p class="mt-3">Desenvolvido por by Murilo Almeida ©.</p>
+  </footer>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
-            <div class="container d-flex align-items-center ">
-                  <div class="col-5">
-                    <h2>O é o Fast & Furious</h2>
-                    <p class="p-2 text-item">Velozes e Furiosos (Fast & Furious) é uma franquia de filmes de ação focada em corridas de rua, assaltos e espionagem, 
-                        marcada por carros tunados, cenas explosivas e temas de amizade e família.</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="galeria">
-            <h2 class="text-center pt-5">Galeria</h2>
-            <div class="container p-3 mt-3 fundo-galeria ">
-
-                <div class="row justify-content-md-center">
-                    <div class="col-md-4">
-                        <img src="img/car collection museum.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
-                    </div>                    
-                    <div class="col-md-4">
-                        <img src="img/r34.jpg"  width="345" height="230" class="img-fluid rounded-5"
-                            loading="lazy">
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contato">
-            <div class="container p-5 d-flex justify-content-center">
-                <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
-                    <h2 class="mb-3">Entre em contato</h2>
-                    <form id="form-contato">
-                        <div class="form-group mb-3">
-                            <label for="nome">Nome</label>
-                            <input type="text" id="nome" name="nome" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu nome completo">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu email">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="mensagem">Mensagem</label>
-                            <textarea id="mensagem" name="mensagem" class="form-control rounded-4 mt-2" rows="4"
-                                placeholder="Escreva sua mensagem"></textarea>
-                        </div>
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary btn-lg rounded-pill tamanho-botao">Enviar
-                                mensagem</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer class="text-center p-3 fst-italic">
-        <p>Acesse nossas redes:</p>
-        <i class="bi bi-whatsapp"></i>
-        <i class="bi bi-instagram"></i>
-        <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por by Murilo Almeida ©.</p>
-    </footer>
-    <script src="./script.js"></script>
-
+  <script src="script.js"></script>
 </body>
-
 </html>
