--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Fast & Furious</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -28,20 +30,7 @@
         <div class="esquerda-conteudo">
           <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindos ao</h1>
           <img src="img/logo prata.png" alt="Logo fast & furious" class="mb-3" width="350" loading="lazy" />
-          <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Bora ver!</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- Seção Tropicalia -->
-    <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
-      <div class="container d-flex align-items-center">
-        <div class="col-5">
-          <h2>O que é o Fast & Furious</h2>
-          <p class="p-2 text-item">
-            Velozes e Furiosos (Fast & Furious) é uma franquia de filmes de ação focada em corridas de rua, assaltos e espionagem,
-            marcada por carros tunados, cenas explosivas e temas de amizade e família.
-          </p>
+          <a href="./sobre.html" class="btn btn-primary btn-lg botao-inicio fw-semibold">Bora ver!</a>
         </div>
       </div>
     </section>
@@ -63,4 +52,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
