--- a/galeria.html
+++ b/galeria.html
@@ -28,9 +28,11 @@
       <div class="row justify-content-md-center">
         <div class="col-md-4">
           <img src="img/car collection museum.jpg" class="img-fluid rounded-5" loading="lazy" />
+          <p>Carro estilo americado que ficou marcado, como carro do personagem Toreto.</p>
         </div>
         <div class="col-md-4">
           <img src="img/r34.jpg" width="345" height="230" class="img-fluid rounded-5" loading="lazy" />
+          <p>Carro japones que é lembrado até hoje como carro do Bryan.</p>
         </div>
       </div>
     </div>
